# fx-report

./: .gitattributes  .gitignore  .gitmessage  LICENSE  README.md  pyproject.toml
.github/scripts/: publish_fx_report.sh
.github/workflows/: daily_report.yml  weekend_report.yml
docs/: api.md  installation.md  tests.md  usage.md
docs/translations/ru/: README.md  api.md  installation.md  tests.md  usage.md
fx_report/: __init__.py  __main__.py  app.py  cli.py  config.py  errors.py  models.py  protocols.py
fx_report/api/: __init__.py  client.py
fx_report/report/: __init__.py  markdown.py
fx_report/services/: __init__.py  report_service.py
fx_report/utils/: __init__.py  formatting.py
output/: fx_report.md
tests/: test_app.py  test_cli.py  test_client.py  test_formatting.py  test_markdown.py  test_service.py
