[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fx-report"
version = "1.0.0"
description = "Generate Markdown FX snapshot reports from a pluggable data source."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = ["requests>=2.31,<3"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
fx-report = "fx_report.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["fx_report*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
